--- a/AP_CS_Solutions/.project
+++ b/AP_CS_Solutions/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AP Computer Science Solutions</name>
+	<name>AP_CS_Solutions</name>
 	<comment></comment>
 	<projects>
 	</projects>
